--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\snthadev\AppData\Local\Temp\testng-eclipse-632517296\testng-customsuite.xml</span>
+                    <span>C:\Users\snthadev\AppData\Local\Temp\testng-eclipse--1557434425\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.check.AutomationDemoSite" class="method navigator-link" hash-for-method="Scenario2">Scenario2</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.check.CPUValueTest" class="method navigator-link" hash-for-method="Scenario4">Scenario4</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.check.AutomationDemoSite</span>
+              <span class="class-name">com.check.CPUValueTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Scenario2">
-                  </a> <!-- Scenario2 -->
-                  <span class="method-name">Scenario2</span>
+                  <a name="Scenario4">
+                  </a> <!-- Scenario4 -->
+                  <span class="method-name">Scenario4</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\snthadev\AppData\Local\Temp\testng-eclipse-632517296\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\snthadev\AppData\Local\Temp\testng-eclipse--1557434425\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.check.AutomationDemoSite&quot;/&gt;
+      &lt;class name=&quot;com.check.CPUValueTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Scenario2')
-data.setCell(0, 2, 'com.check.AutomationDemoSite')
-data.setCell(0, 3, 7196);
+data.setCell(0, 1, 'Scenario4')
+data.setCell(0, 2, 'com.check.CPUValueTest')
+data.setCell(0, 3, 1536);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.check.AutomationDemoSite</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.check.CPUValueTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">OpenApplication</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">Scenario2</span>
-                <span class="method-start">7648 ms</span>
+                <span class="method-name">Scenario4</span>
+                <span class="method-start">8469 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">CloseApplication</span>
-                <span class="method-start">14858 ms</span>
+                <span class="method-start">10018 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
